# xp-near-integration

./: .env.example  .gitignore  .prettierignore  Cargo.toml  Deploy.md  README.md  build.sh  convertGK.js  package.json  tsconfig.json
bridge/: Cargo.toml
bridge/src/: lib.rs
contract/: Cargo.toml  deploy.sh
contract/collection-creator/: Cargo.toml
contract/collection-creator/src/: events.rs  external.rs  lib.rs
contract/collection-creator/src/assets/: xpnft_royalty.wasm
contract/currency-data-oracle/: Cargo.toml
contract/currency-data-oracle/src/: lib.rs
contract/xpbridge/: Cargo.toml
contract/xpbridge/src/: events.rs  external.rs  lib.rs
contract/xpnft/: Cargo.toml
contract/xpnft-erc1155/: Cargo.toml
contract/xpnft-erc1155/src/: lib.rs
contract/xpnft-royalty/: Cargo.toml
contract/xpnft-royalty-erc1155/: Cargo.toml
contract/xpnft-royalty-erc1155 (in progress)/src/: approval.rs  metadata.rs
contract/xpnft-royalty-erc1155/src/: burn.rs  enumeration.rs  events.rs  lib.rs  tests.rs
contract/xpnft-royalty/src/: burn.rs  lib.rs  mint.rs  nft_core.rs  royalty.rs
contract/xpnft/src/: lib.rs
integration-tests/: package.json
integration-tests/src/: main.ava.ts
scripts/: index.js  view_state_keys.js
src/: create-mainnet-account.js  create-mainnet-account.ts  create-testnet-account.js  create-testnet-account.ts  deploy.ts  encode.ts  lib.rs  setup.ts  whitelist.ts
src/helper/: bridge.ts  index.ts  xpnft.ts
tests/: bridge.ts  workspaces.rs  xp_bridge.rs  xpnft.ts
xpbridge/: Cargo.toml
xpbridge/src/: lib.rs
xpnft/src/: lib.rs
