[package]
name = "xp-bridge"
version = "0.1.0"
authors = ["Near Inc <hello@nearprotocol.com>"]
edition = "2021"

[dev-dependencies]
anyhow = "1.0"
near-sdk = "4.0.0"
near-units = "0.2.0"
serde_json = "1.0"
test-case = "2.0"
tokio = { version = "1.14", features = ["full"] }
workspaces = "0.4.0"
tracing-subscriber = "0.3.15"
ed25519-dalek = { version = "1.0.1", features = ["std", "rand"] }
rand_core = { version = "0.5.1", features = ["getrandom"] }

bridge = { path = "./bridge" }
xpnft = { path = "./xpnft" }

[profile.release]
codegen-units = 1
# Tell `rustc` to optimize for small code size.
opt-level = "z"
lto = true
debug = false
panic = "abort"

[workspace]
members = [
  "bridge",
  "xpnft",
]
