[package]
name = "xpnft_erc1155"
version = "1.1.0"
authors = ["Near Inc <hello@nearprotocol.com>", "@jriemann"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
serde_json = "1.0"
near-sdk = { git = "https://github.com/jriemann/near-sdk-rs.git", branch = "multi-token-reference-impl" }
near-contract-standards = { git = "https://github.com/jriemann/near-sdk-rs.git", branch = "multi-token-reference-impl" }